criando fluxo de criaçao de campeonato
